infra/k8s-prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: kitapkurdu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitapkurdu
      tier: frontend
      track: stable
  template:
    metadata:
      labels:
        app: kitapkurdu
        tier: frontend
        track: stable
    spec:
      containers:
        - name: frontend
          image: sayinmehmet47/client-kitapkurdu-1:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m" 
              memory: "900Mi" 
            limits:
                    cpu: "500m" 
                    memory: "1600Mi"  
---
apiVersion: v1 
kind: Service
metadata:
  name: frontend-service
  namespace: kitapkurdu
spec: 
  selector:
      app: kitapkurdu
      tier: frontend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
