infra/k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitapkurdu-ingress
  namespace: kitapkurdu
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' 
    cert-manager.io/cluster-issuer: letsencrypt-http
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kitapkurdu.alphaworld.ch
      secretName: kitapkurdu-tls
  rules:
    - host: kitapkurdu.alphaworld.ch
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            pathType: Prefix
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
